--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -10,8 +10,7 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-
-[bar/example]
+[bar/My_polybar]
 width = 100%
 height = 27
 fixed-center = true
@@ -35,7 +34,6 @@ modules-center =
 modules-right = pulseaudio wlan battery date
 
 wm-restack = bspwm
-
 
 [module/xwindow]
 type = internal/xwindow
