--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,5 +6,11 @@
 
 config_version: 2
 settings:
-  content.notifications.enabled:
-    https://www.reddit.com: true
+  content.desktop_capture:
+    https://discord.com: true
+  content.media.audio_capture:
+    https://discord.com: true
+  statusbar.show:
+    global: always
+  tabs.show:
+    global: always
