--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -2,6 +2,13 @@ window:
   opacity: 0.7
   title: Alacritty
   dynamic_title: true
+  padding:
+    x: 0
+    y: 0
+  dynamic_padding: false 
+  dimension:
+    columns: 0
+    lines: 0
 
 scrolling:
   history: 10000
@@ -21,6 +28,9 @@ font:
     family: DroidSansMono Nerd Font Mono
     style: Bold Italic
   size: 9.9
+  offset:
+    x: 1
+    y: 0
 draw_bold_text_with_bright_colors: true
 
 colors:
