--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -4,8 +4,11 @@ include-file = ~/.config/polybar/My_Poly_Modules.ini
 
 
 [bar/My_polybar]
-width = 100%
+width = 90%
 height = 27
+offset-x = 5%
+offset-y = 1%
+radius = 5.0
 fixed-center = true
 
 background = ${colors.background}
@@ -33,8 +36,8 @@ screenchange-reload = true
 compositing-background = xorg
 ;compositing-background = screen
 ;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
+compositing-border = over
+pseudo-transparency = false
 
 
 [global/wm]
