--- a/polybar/My_Poly_Modules.ini
+++ b/polybar/My_Poly_Modules.ini
@@ -3,7 +3,7 @@
 include-file = colors.ini
 
 include-file = modulos/battery.ini
-include-file = modulos/bspwm.ini 
+include-file = modulos/TWS.ini 
 include-file = modulos/date.ini
 include-file = modulos/Pulse_Audio.ini
 include-file = modulos/wlan.ini
