--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -1,7 +1,8 @@
 [colors]
 background = #222
 background-alt = #444
-foreground = #dfdfdf
+;foreground = #dfdfdf
+foreground = #cbcbcb
 foreground-alt = #555
 complete = #19cc16
 primary = #ffb52a
