--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,6 +1,6 @@
 ;My_polybar
 
-include-file = ~/.config/polybar/My_Poly_Modules.ini
+include-file = ~/.dotfiles/polybar/My_Poly_Modules.ini
 
 
 [bar/My_polybar]
@@ -9,7 +9,7 @@ height = 27
 offset-x = 5%
 offset-y = 1%
 radius = 5.0
-fixed-center = true
+fixed-center = true:w
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -25,11 +25,11 @@ module-margin-right = 2
 
 font-0 = FiraCode Nerd Font:size=8;1
 
-modules-left = bspwm xwindow
+modules-left = TWS xwindow
 modules-center =   
 modules-right = pulseaudio wlan battery date
 
-wm-restack = bspwm
+;wm-restack = bspwm
 
 [settings]
 screenchange-reload = true
