--- a/polybar/modulos/battery.ini
+++ b/polybar/modulos/battery.ini
@@ -1,25 +1,38 @@
-
 [module/battery]
 type = internal/battery
 battery = BAT1
 adapter = ACAD
+
 full-at = 95
 low-at = 15
+poll-interval = 2
 
-format-full = <label-full>
+format-charging = <animation-charging>  <label-charging>
+format-charging-background = ${colors.background}
+format-charging-foreground = ${colors.charging}
+format-charging-padding = 0
+format-discharging = <ramp-capacity>  <label-discharging>
+format-discharging-background = ${colors.background}
+format-discharging-foreground = ${colors.foreground}
+format-discharging-padding = 0
+format-full =<label-full>
+format-full-background = ${colors.background}
 format-full-foreground = ${colors.complete}
-format-full-underline = #239672
+format-full-padding = 0
+label-charging = "%percentage%%"
+label-discharging = "%percentage%%"
 
-format-charging = <label-charging>
-format-charging-foreground = ${colors.primary}
-format-charging-underline = #239672
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-0-foreground = ${color.alert} 
 
-format-discharging = <ramp-capacity><label-discharging>
-format-discharging-underline = #239672
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-0-foreground = ${colors.alert}
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+
+animation-charging-framerate = 600
