--- a/polybar/modulos/wlan.ini
+++ b/polybar/modulos/wlan.ini
@@ -1,12 +1,14 @@
-
 [module/wlan]
 type = internal/network
-interface = wlp3s0 
-interval = 3.0
+interface = wlp3s0
+interval = 1.0
 
-format-connected = <label-connected> 
-format-connected-underline = #9f78e1
-label-connected =  %essid%
+format-connected = <label-connected>
+label-connected = "  %essid%" 
+label-connected-foreground = #cbcbcb 
+;;label-connected-background = ${colors.background}
 
-format-disconnected = 睊<label-disconnected>
-format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected = <label-disconnected>
+label-disconnected = "󰖪"
+label-disconnected-foreground =  #cbcbcb
+;;label-disconnected-background = ${colors.background}
