--- a/polybar/My_Poly_Modules.ini
+++ b/polybar/My_Poly_Modules.ini
@@ -8,7 +8,8 @@ include-file = modulos/date.ini
 include-file = modulos/Pulse_Audio.ini
 include-file = modulos/wlan.ini
 include-file = modulos/xwindow.ini
-
+;include-file = modulos/rround.ini
+;include-file = modulos/lround.ini
 
 
 
