--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -1,8 +1,9 @@
 [colors]
 background = #222
 background-alt = #444
+trans = #00000000
 ;foreground = #dfdfdf
-foreground = #cbcbcb
+foreground = #A0A0AB
 foreground-alt = #555
 complete = #19cc16
 primary = #ffb52a
