--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,7 +25,7 @@ module-margin-right = 2
 
 font-0 = FiraCode Nerd Font:size=8;1
 
-modules-left = TWS xwindow
+modules-left = TWS xwindow rround
 modules-center =   
 modules-right = pulseaudio wlan battery date
 
