--- a/polybar/modulos/Pulse_Audio.ini
+++ b/polybar/modulos/Pulse_Audio.ini
@@ -7,9 +7,9 @@ interval = 5
 format-volume = <ramp-volume> <label-volume>
 format-volume-underline = #cce0d2
 
-label-muted = ﱝ
+label-muted = 󰝟
 format-muted-underline = #cce0d2
 
-ramp-volume-0 = 奄 
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
